2004-08-14 Eric Schabell <eschabell@sourcemage.org>
	* CONFIGURE: z-java/JAVA_WARNING added.

2004-08-07 Eric Schabell <eschabell@sourcemage.org>
	* BUILD, DETAILS: modified for api2.
	* INSTALL: added for api2.
	* CONFIGURE: modified to use grimoire rejected message.

2004-08-05 Eric Sandall <eric@sandall.us>
	* DEPENDS: unixODBC renamed to unixodbc

2004-07-18 Eric Schabell <eschabell@sourcemage.org>
	* j2sdk-1_4_2-smgl.patch: reverted as this is not the fix.
	* j2sdk-1_4_2-smgl.patch: adjusted with fix in bug #6354.

2004-07-03 Jose Bernardo Silva <jbernardo@sourcemage.org>
	* BUILD: added firefox support, cleaned up a little the whole
	  plugin install. Still needs a little work

2004-05-21 Eric Sandall <eric@sandall.us>
	* CONFIGURE: Needs "&&" after the ask_rejected

2004-01-10 hgg <hgreig@bigpond.net.au>
	* BUILD: export MAKE_NJOBS=1 instead of unset MAKE_NJOBS (caused error message if unset)

2004-01-09 hgg <hgreig@bigpond.net.au>
	* j2sdk-1_4_2-kernel.patch,PRE_BUILD: add with a check for 2.6.X headers in /usr/include/linux
	* j2sdk-1_4_2-smgl.patch: disable some deprecated Linuxthreads calls that caused problems with some gcc 
	  and glibc versions
	* BUILD: swap POOPY for MOZPLUG

2004-01-08 hgg <hgreig@bigpond.net.au>
	* PRE_BUILD: 2.6 kernel uses different /proc interface. check for kernel version before checking for free 
	  space bug #5486
	* j2sdk-1_4_2-smgl.patch: fix for alsa 1.0.0rc2

2003-12-14 hgg <hgreig@bigpond.net.au>
	* BUILD,java.sh: now installs this file for setting of $JAVA_HOME
	* POST_INSTALL: deleted (see above)

2003-11-28 hgg <hgreig@bigpond.net.au>
	* DEPENDS: change to X11-LIBS now I have fixed the xfree86-libs and xdirectfb spell

2003-11-25 hgg <hgreig@bigpond.net.au>
	* j2sdk-1_4_2-smgl.patch: update by Jason for new alsa version check

2003-11-22 hgg <hgreig@bigpond.net.au>
	* BUILD: remove the "df" I had for debugging

2003-10-29 Eric Sandall <eric@sandall.us>
	* PROVIDES: Uppercase provides
