@@ -1,6 +1,6 @@
             SPELL=j2sdk
           VERSION=1_4_2
-      BIN_VERSION=1.4.1
+      BIN_VERSION=1.4.2_05
      ZLIB_VERSION=1.1.4
            SOURCE=$SPELL-${VERSION}-src-scsl.zip
           SOURCE2=$SPELL-${VERSION}-mozilla_headers-unix.zip
