@@ -1,6 +1,6 @@
 if spell_installed j2sdk-bin
 then 
-  export JAVA_HOME=/usr/lib/j2sdk1.4.1
+  export JAVA_HOME=/usr/lib/j2sdk${BIN_VERSION}
 fi                                                   &&
 
 if ! [ -f $JAVA_HOME/bin/java ] || ! grep -q BOOTSTRAP $SPELL_CONFIG;
